--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/estilo.css">
 <!-- Certifique-se de que o caminho está correto para o arquivo navbar.js -->
-  <script src="navbar.js"></script> <!-- Inclui o script do menu -->  
+  <script src="gelato/navbar.js"></script> <!-- Inclui o script do menu -->  
   <script src="login.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
